testsuite/tests/properties/dynvar_missing_binding/test.out
== foo.lkt ==
foo.lkt:23:25: error: my_var is not bound in this context: please use the 'bind' construct to bind is first.
23 |     fun p2(): FooNode = my_var
   |                         ^^^^^^


lkt_compile: Done
